fixed spacing issue with products section

--- a/css/small.css
+++ b/css/small.css
@@ -15,6 +15,26 @@ body {
     font-weight: 300;
 }
 
+
+/* Grid Rules */
+
+.row {
+    clear: both;
+}
+
+.limited {
+    max-width: 1140px;
+    margin: auto;
+}
+
+.column {
+    float: left;
+    padding: 0 2vw 0 2vw;
+    margin: 0 0 .75rem 0;
+    text-align: center;
+}
+
+
 /* Header */
 
 header {
@@ -75,6 +95,7 @@ nav a:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+
 /* Homepage Hero Section */
 
 .hero {
@@ -83,6 +104,7 @@ nav a:hover {
     text-align: center;
     padding: 50px 0;
 }
+
 
 /* Homepage - Who we are section */
 
@@ -95,15 +117,16 @@ nav a:hover {
 
 /* Hompage Products */
 
+.homepage-products {
+    margin-top: 15px;
+}
+
 .homepage-products > a {
     list-style: none;
     border-style: solid;
     padding: 10px;
-    margin: 15px;
     display: block;
     text-align: center;
-    margin: 15px auto;
-    max-width: 50%;
 }
 
 .homepage-products > button {
@@ -112,23 +135,6 @@ nav a:hover {
     padding: 8px;
 }
 
-/* Grid Rules */
-
-.row {
-    clear: both;
-}
-
-.limited {
-    max-width: 1140px;
-    margin: auto;
-}
-
-.column {
-    float: left;
-    padding: 0 2vw 0 2vw;
-    margin: 0 0 .75rem 0;
-    text-align: center;
-}
 
 /* Footer */
 
